# execforge

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: ARCHITECTURE.md  LICENSE.md  USAGE_WALKTHROUGH.md
examples/: agent-config.toml
examples/tasks/: task-001-health-check.md  task-002-lint-cleanup.md  task-quick-create-python-app.md
examples/tasks/prompts/: implement-health.md  plan-health.md
src/orchestrator/: __init__.py  __main__.py  config.py  exceptions.py  logging_setup.py
src/orchestrator/backends/: base.py  factory.py  llm_cli_backend.py  mock_backend.py  shell_backend.py
src/orchestrator/cli/: main.py
src/orchestrator/domain/: __init__.py  types.py
src/orchestrator/git/: __init__.py  service.py
src/orchestrator/prompts/: __init__.py  parser.py
src/orchestrator/reporting/: __init__.py  console.py  events.py  selection_result.py
src/orchestrator/services/: agent_runner.py  agent_service.py  project_service.py  prompt_source_service.py  run_service.py  step_executor.py  task_service.py
src/orchestrator/storage/: __init__.py  db.py  models.py
src/orchestrator/utils/: process.py
src/orchestrator/validation/: pipeline.py
tests/e2e/: test_git_branch_bootstrap.py  test_smoke_e2e.py
tests/unit/: test_agent_config_management.py  test_config_management.py
